--- a/ShaderBoss/imgui.ini
+++ b/ShaderBoss/imgui.ini
@@ -4,19 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][###0]
-Pos=604,123
-Size=536,610
+Pos=291,186
+Size=789,551
 Collapsed=0
 
 [Window][###1]
-Pos=290,195
-Size=333,172
+Pos=58,137
+Size=536,610
 Collapsed=0
 
 [Window][###3]
-Pos=151,230
-Size=333,172
-Collapsed=1
+Pos=549,101
+Size=536,610
+Collapsed=0
 
 [Window][###2]
 Pos=528,94
@@ -24,7 +24,12 @@ Size=333,172
 Collapsed=1
 
 [Window][OpenGL Info]
-Pos=-71,219
+Pos=204,192
 Size=555,236
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1528,454
+Size=1254,1127
 Collapsed=0
 
